2009-02-03
    - Added support for the Sanguino (ATmega xx4 series)
    - Added support for the ATmega 8
    - Moved the project to Google Code:
        http://code.google.com/p/tlc5940arduino/
    - Fixed a bug in tlc_fades.h: assignment of struct arrays
    - Cleaned up the whitespace in the library: 4 spaces instead of tabs

2009-01-25
    - Added tlc_fades.h
    - Added include "tlc_config.h" to Tlc5940.h so it's not required
        in the sketch
    - Added Tlc.setAll(value)
    - Changed a few for loops in Tlc5940.cpp: used *p++ instead of having
        p++ in the increment section of the for loop; changed to while loops

2008-11-26
    - Tlc.init() sets all channels to zero and updates.
    - Added TLC_PWM_PERIOD and TLC_GSCLK_PERIOD to tlc_config.h
    - Added TLC_CHANNEL_TYPE to tlc_config.h - Adds support for up to 4096 TLCs.
                                               (if TLC_CHANNEL_TYPE is uint16_t)
    - Changed the examples to use TLC_CHANNEL_TYPE
    - set DATA_TRANSFER_MODE default to TLC_SPI

2008-11-11
    - Added tlc_animations.h and examples
    - Fixed SPI mode - (don't use enums as constants
                        "#if A == 1" doesn't work)

2008-10-31
    - Initial Release