@@ -77,3 +77,4 @@
 #define GSCLK_DDR    DDRD
 
 #endif
+
