@@ -1,3 +1,8 @@
+2009-02-16
+    - Added tlc_servos.h and example (thank you Steve Pomeroy)
+    - Cleaned up some older documentation
+    - Added trailing newlines to c, h, cpp, and pde files
+
 2009-02-03
     - Added support for the Sanguino (ATmega xx4 series)
     - Added support for the ATmega 8
